fix(pinterest): fix more ideas on mobile

--- a/styles/pinterest/catppuccin.user.css
+++ b/styles/pinterest/catppuccin.user.css
@@ -467,6 +467,15 @@
       }
     }
 
+    /** Mobile **/
+
+    div.CCY.S9z.INd.Tbt.L4E.e8F.BG7 & div.INd.hA-.wYR.zI7.iyn.Hsu {
+      background-color: fadeout(@mantle, 25%) !important;
+      & svg > path {
+        fill: @text !important;
+      }
+    }
+
     /* Content */
 
     div[data-root-margin="more-ideas-tabs"] div.urM.zI7.iyn.Hsu,
